--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "single-spa-react": "^2.10.2"
+    "single-spa-react": "^6.0.1"
   },
   "devDependencies": {
     "@rescripts/cli": "0.0.11",
@@ -15,7 +15,7 @@
     "babel-plugin-import": "^1.12.0"
   },
   "scripts": {
-    "start": "PORT=3004 rescripts start",
+    "start": "set PORT=3004 && rescripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
